--- a/index.html
+++ b/index.html
@@ -3,87 +3,69 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Athena Beauty</title>
+<title>Афіна CRM</title>
 
 <style>
 body {
     margin: 0;
-    font-family: 'Segoe UI', sans-serif;
-    background: linear-gradient(135deg, #f8cdda, #1d2b64);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    font-family: Arial, sans-serif;
+    background: linear-gradient(135deg, #f5f7fa, #e4ecf7);
 }
 
 .container {
+    max-width: 900px;
+    margin: 60px auto;
     background: white;
-    width: 95%;
-    max-width: 500px;
+    padding: 40px;
     border-radius: 15px;
-    padding: 20px;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+    box-shadow: 0 15px 40px rgba(0,0,0,0.08);
 }
 
-h2 {
+h1 {
     text-align: center;
-    margin-bottom: 15px;
+    color: #2c3e50;
 }
 
-.messages {
-    height: 250px;
-    overflow-y: auto;
-    margin-bottom: 10px;
-    padding: 10px;
-    background: #f4f4f4;
-    border-radius: 10px;
+.input-group {
+    margin: 20px 0;
 }
 
-.user {
-    text-align: right;
-    color: #1d2b64;
-    margin: 5px 0;
+label {
+    display: block;
+    margin-bottom: 8px;
+    font-weight: bold;
 }
 
-.bot {
-    text-align: left;
-    color: #e91e63;
-    margin: 5px 0;
-}
-
-.controls {
-    display: flex;
-    gap: 5px;
-}
-
-input[type="text"] {
-    flex: 1;
-    padding: 8px;
+input {
+    width: 100%;
+    padding: 12px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    font-size: 16px;
 }
 
 button {
-    padding: 8px 12px;
+    width: 100%;
+    padding: 14px;
     border: none;
-    background: #e91e63;
+    border-radius: 10px;
+    background: #4a90e2;
     color: white;
-    border-radius: 5px;
+    font-size: 16px;
     cursor: pointer;
+    transition: 0.3s;
 }
 
-.quick-buttons {
-    margin-top: 10px;
-    display: flex;
-    gap: 5px;
-    flex-wrap: wrap;
+button:hover {
+    background: #357bd8;
 }
 
-.quick-buttons button {
-    background: #1d2b64;
-    font-size: 12px;
-}
-
-.calendar {
-    margin-top: 10px;
+.result {
+    margin-top: 20px;
+    padding: 15px;
+    background: #f1f5fb;
+    border-radius: 8px;
+    word-break: break-all;
 }
 </style>
 </head>
@@ -91,63 +73,33 @@ button {
 <body>
 
 <div class="container">
-    <h2>Athena Beauty</h2>
+    <h1>Афіна CRM</h1>
 
-    <div class="messages" id="messages"></div>
-
-    <div class="controls">
-        <input type="text" id="msg" placeholder="Напишіть повідомлення...">
-        <button onclick="send()">OK</button>
+    <div class="input-group">
+        <label>Назва салону</label>
+        <input type="text" id="salon" placeholder="Введіть назву">
     </div>
 
-    <div class="quick-buttons">
-        <button onclick="quickBook('Стрижка')">Стрижка</button>
-        <button onclick="quickBook('Фарбування')">Фарбування</button>
-        <button onclick="showAppointments()">Мої записи</button>
-    </div>
+    <button onclick="generateLink()">Створити посилання</button>
 
-    <div class="calendar">
-        <label>Дата:</label>
-        <input type="date" id="date">
-        <label>Час:</label>
-        <input type="time" id="time">
-    </div>
+    <div class="result" id="result"></div>
 </div>
 
 <script>
-async function send(message=null) {
-    const input = document.getElementById("msg");
-    const msg = message || input.value;
-    if (!msg) return;
+function generateLink() {
+    const salon = document.getElementById("salon").value;
+    if (!salon) return alert("Введіть назву салону");
 
-    const messages = document.getElementById("messages");
+    const encoded = encodeURIComponent(salon);
+    const link = `https://URAHAN2006.github.io/afina/client.html?salon=${encoded}`;
 
-    messages.innerHTML += `<div class="user">${msg}</div>`;
-
-    const res = await fetch(`http://127.0.0.1:8000/chat?q=${encodeURIComponent(msg)}`);
-    const data = await res.json();
-
-    messages.innerHTML += `<div class="bot">${data.response}</div>`;
-
-    input.value = "";
-    messages.scrollTop = messages.scrollHeight;
+    document.getElementById("result").innerHTML =
+        link + "<br><br><button onclick='copyLink(\"" + link + "\")'>Скопіювати</button>";
 }
 
-function quickBook(service) {
-    const date = document.getElementById("date").value;
-    const time = document.getElementById("time").value;
-
-    if (!date || !time) {
-        alert("Оберіть дату і час");
-        return;
-    }
-
-    const msg = `Хочу записатись на ${service} ${date} о ${time} мене звати Клієнт`;
-    send(msg);
-}
-
-function showAppointments() {
-    send("Покажи записи");
+function copyLink(link) {
+    navigator.clipboard.writeText(link);
+    alert("Посилання скопійовано!");
 }
 </script>
 
